openssl warning bug fix, resources updates, small changes
Signed-off-by: laurent <laurent@opencipher.net>

--- a/ClipboardEncryptForm.en.resx
+++ b/ClipboardEncryptForm.en.resx
@@ -121,6 +121,9 @@
   <data name="OkBtn.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
+  <data name="OkBtn.Text" xml:space="preserve">
+    <value>&amp;OK</value>
+  </data>
   <data name="KeyTxt.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
