--- a/MainForm.en.resx
+++ b/MainForm.en.resx
@@ -118,30 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="EncryptFileMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="SeparatorMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>223, 6</value>
-  </data>
-  <data name="EncryptClipboardMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="DecryptClipboardMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="Separator2Menu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>223, 6</value>
-  </data>
-  <data name="HelpMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="AboutMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
-  <data name="ExitMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 30</value>
-  </data>
   <data name="IconContextMenu.Size" type="System.Drawing.Size, System.Drawing">
     <value>227, 196</value>
   </data>
@@ -239,6 +215,38 @@
         yNSvr69MAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAIABAADAAwAAwAMAAMADAADAAwAAwAMAAMAD
         AADgAwAA8c8AAPHPAADxjwAA8A8AAPAPAAD4HwAA
 </value>
+  </data>
+  <data name="EncryptFileMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="SeparatorMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>223, 6</value>
+  </data>
+  <data name="EncryptClipboardMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="DecryptClipboardMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="Separator2Menu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>223, 6</value>
+  </data>
+  <data name="HelpMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="AboutMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="ExitMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 30</value>
+  </data>
+  <data name="InfoTxt.Text" xml:space="preserve">
+    <value>Open Cipher http://www.opencipher.net/
+
+Laurent Dubois &lt;laurent@opencipher.net&gt;
+
+Open Cipher is free and open source software distributed under GPL v3 license, its usage provides no warranty.
+All encryption processes are done using OpenSSL, for more information please refer to Open Cipher website.</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
